tests/NormalTests/paczka2/big_fuzzy/95370592.err
Error in line 10: 4U9BiieK A0 3,6
Error in line 12: 4U9BiieK A0 16,7
Error in line 13: NSF8c A0 21,2
Error in line 15: Px3mpXpb A0 60,3
Error in line 18: NSF8c A0 39,9
Error in line 4: 4U9BiieK A922 38,4
Error in line 22: A971 A0 49,5
Error in line 20: A971 A922 54,2
Error in line 19: 4U9BiieK A971 44,5
Error in line 27: 4U9BiieK A922 50,0
Error in line 31: 4U9BiieK A0 6,9
Error in line 26: A971 A826 42,6
Error in line 33: 4U9BiieK A0 33,3
Error in line 30: 4U9BiieK A826 22,9
Error in line 40: r6Tv A971 68,5
Error in line 47: Px3mpXpb A0 97,1
Error in line 48: Px3mpXpb A0 247,6
Error in line 50: Px3mpXpb A0 89,0
Error in line 51: Px3mpXpb A0 40,0
Error in line 52: r6Tv A0 45,4
Error in line 53: r6Tv A0 174,8
Error in line 56: avz7 A0 82,7
Error in line 57: avz7 A0 188,6
Error in line 60: NSF8c A91 5,4
Error in line 61: o4KHFCai6pE A922 16,60
Error in line 55: avz7 A826 39,6
Error in line 63: avz7 A922 89,5
Error in line 58: o4KHFCai6pE A922 11,4
Error in line 66: Px3mpXpb A826 39,3
Error in line 73: r6Tv A0 29,0
Error in line 75: NSF8c A0 17,3
Error in line 76: r6Tv A0 50,5
Error in line 74: 4U9BiieK A922 63,8
Error in line 81: NSF8c A0 60,6
Error in line 82: NSF8c A0 15,3
Error in line 84: NSF8c A0 75,7
Error in line 85: A971 A0 46,4
Error in line 86: A971 A0 163,3
Error in line 45: r6Tv A922 5,7
Error in line 78: avz7 A971 74,0
Error in line 91: 4U9BiieK A0 69,3
Error in line 90: avz7 A826 42,3
Error in line 99: avz7 A0 18,5
Error in line 100: avz7 A0 39,2
Error in line 104: 4U9BiieK A0 83,2
Error in line 105: r6Tv A0 17,1
Error in line 110: o4KHFCai6pE A0 13,1
Error in line 113: av	7 A922 23,2
Error in line 123: r6Tv A0 66,6
Error in line 124: avz7 A0 65,8
Error in line 116: 4U9BiieK A971 56,0
Error in line 128: r6Tv A0 173,8
Error in line 130: 4U9BiieK A0 88,0
Error in line 131: r6Tv A0 68,0
Error in line 135: 4U9BiieK A0 20,0
Error in line 136: 4U9BiieK A0 69,4
Error in line 138: o4KHFCai6pE A0 15,6
Error in line 119: o4KHFCai6pE A971 288,8
Error in line 142: 4U9BiieK A0 35,8
Error in line 140: o4KHFCai6pE A922 82,3
Error in line 152: 4U9BiieK A0 11,4
Error in line 155: 4U9BiieK A0 7,3
Error in line 161: Px3mpXpb A0 60,8
Error in line 162: Px3mpXpb A0 110,7
Error in line 168: avz7 A0 16,8
Error in line 172: r6Tv A971 46,2
Error in line 167: avz7 A971 73,8
Error in line 177: NSF8c A0 97,2
Error in line 178: NSF8c A0 323,7
Error in line 180: Px3mpXpb A0 3,3
Error in line 181: o4KHFCai6pE A0 18,3
Error in line 185: o4KHFCai6pE A0 3,7
Error in line 188: o4KHFCai6pE A0 23,7
Error in line 189: Px3mpXpb A0 0,7
Error in line 191: 4U9BiieK A0 93,5
Error in line 192: o4KHFCai6pE A0 72,8
Error in line 186: o4KHFCai6pE A971 32,3
Error in line 196: r6Tv A0 27,1
Error in line 199: NSF8c A0 68,9
Error in line 194: Px3mpXpb A971 162,1
Error in line 200: A971 A971 6,2
Error in line 204: 4U9BiieK A0 233,8
Error in line 205: A971 A0 77,2
Error in line 208: r6Tv A0 33,8
Error in line 211: r6Tv A0 12,2
Error in line 212: A971 A0 383,7
Error in line 216: Px3mpXpb A0 35,7
Error in line 226: Px3mpXpb A0 12,1
Error in line 227: 4U9BiieK A971 64,2
Error in line 222: o4KHFCai6pE A826 60,7
Error in line 235: 4U9BiieK A0 49,3
Error in line 237: 4U9BiieK A0 21,2
Error in line 233: NSF8c A922 9,9
Error in line 240: A971 A0 10,4
Error in line 242: A971 A0 38,8
Error in line 234: o4KHFCai6pE A971 51,6
Error in line 245: A971 A0 89,1
Error in line 249: Px3mpXpb A971 228,85
Error in line 250: o4KHFCai6pE A0 81,0
